# SIMDWrapper

./: .buildinfo  .gitignore  AVX2Wrapper.hpp  AVXWrapper.hpp  CMakeLists.txt  LICENSE  README.md  SSEWrapper.hpp  aarch64-Dockerfile  docker-compose.yml  env.sh  genindex.html  index.html  objects.inv  search.html  searchindex.js  test.cpp
.circleci/: config.yml
_sources/api/: vector256_function_details.rst.txt  vector256_member_function_details.rst.txt
_sources/api/x86-64/: instruction.rst.txt
api/: vector128_function_details.html  vector128_member_function_details.html  vector256_function_details.html  vector256_member_function_details.html
api/Arm/: index.html
api/Arm/vector128/: index.html
api/x86-64/: index.html  instruction.html
api/x86-64/vector128/: index.html
api/x86-64/vector256/: index.html
doc/source/: index.rst
docs/: Dockerfile  deploy.sh
docs/source/: conf.py  index.rst
docs/source/api/: vector128_function_details.rst  vector128_member_function_details.rst
docs/source/api/Arm/: index.rst
docs/source/api/Arm/vector128/: index.rst
docs/source/api/x86-64/: index.rst  instruction.rst
docs/source/api/x86-64/vector128/: function_details.rst  index.rst  member_function_details.rst  operations.rst
docs/source/api/x86-64/vector256/: function_details.rst  index.rst  member_function_details.rst  operations.rst
docs/source/installation/: cmake.rst
example/: CMakeLists.txt  arm_test.cpp  convolution.cpp  matrix.cpp  operations.cpp  test.cpp  tmp.cpp
include/: .NEONWrapper.hpp.swp  =  AVX2Wrapper.hpp  NEONWrapper.hpp  SIMDWrapper.hpp  SSEWrapper.hpp
include/SIMDWrapper/: AVX2Wrapper.hpp  NEONWrapper.hpp  SSEWrapper.hpp  common.hpp  x86common.hpp
installation/: cmake.html
